@@ -1,3 +1,9 @@
+2017-10-25  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc.dg/fold-cond_expr-1.c: Rename to...
+	* gcc.dg/fold-cond-2.c: ...this.
+	* gcc.dg/fold-cond-3.c: New test.
+
 2017-10-25  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/82436
